books/projects/rac/tests/yaml_test/data_types/pointers.ref.stderr
pointers.cpp:3 (12-13): syntax error, unexpected '*', expecting ID
  3 | int foo(int *ptr)
    |             ^
