books/projects/rac/tests/yaml_test/data_types/pointers.cpp
// RAC begin

int foo(int *ptr)
{
  return *ptr;
}

// RAC end
